Multiplayer ctrl and functional single-player gameboard

--- a/app/views/matchplayer.html
+++ b/app/views/matchplayer.html
@@ -5,5 +5,7 @@
 
 <div>
 	<h3>Multi-Player Game</h3>
-	<a href="#/matchplayer">Find a player</a>
+	<a href="#/multiplayer/:id/:symbol">Find a player</a>
 </div>
+
+Status: {{noticeMessage}}
