--- a/app/views/multiplayer.html
+++ b/app/views/multiplayer.html
@@ -1,4 +1,4 @@
-<div id="gameboard">
+<div id="gameboard" data-ng-click="turn()">
   <div class="row">
     <div class="cell lt {{ cells[0] }}" id="1" data-ng-click="handleClick(1)">{{ cells[0] }}</div>
     <div class="cell mt {{ cells[1] }}" id="2" data-ng-click="handleClick(2)">{{ cells[1] }}</div>
@@ -24,9 +24,6 @@
       <button data-ng-click="startTimer()">Start</button>
       <button data-ng-click="stopTimer()">Stop</button>
       <button data-ng-click="resetTimer()">Reset</button>
-      <button data-ng-click="getName()">Enter Name</button>
-      <button data-ng-click="addWinToLeaderboard()">Add Win</button>
-      {{userName}}
 
  <div id="play">
     <button data-ng-show="gameEnded" type="button" id="button" data-ng-click="restartGame()">Play Again</button>
